--- a/src/app/pages/10-property-management/components/2-property-management-second-screen/property-management-second-screen.component.html
+++ b/src/app/pages/10-property-management/components/2-property-management-second-screen/property-management-second-screen.component.html
@@ -5,6 +5,7 @@
         <app-property-concierge-wrapper
             [title]="propertyTitle"
             [tags]="propertyTags"
+            [tags2]="propertyTags2"
             [subtitle]="propertySubtitle"
             [description]="propertyDescription"
             [image]="propertyImage"
