--- a/src/app/pages/13-policy/components/1-policy-first-screen/policy-first-screen.component.scss
+++ b/src/app/pages/13-policy/components/1-policy-first-screen/policy-first-screen.component.scss
@@ -23,6 +23,7 @@
         row-gap: 30px;
         line-height: 160%;
         max-height: 436px;
+        min-height: 436px;
         align-content: space-between;
         &-paragraph {
             max-width: 526px;
