feat: added translation for crumbs component

--- a/src/app/pages/5-blog/components/1-blog-first-screen/blog-first-screen.component.html
+++ b/src/app/pages/5-blog/components/1-blog-first-screen/blog-first-screen.component.html
@@ -4,7 +4,7 @@
 
         <div class="blog__first_wrapper">
             <div class="blog__first_left">
-                <h1 class="blog__first_title">{{ t(currentCrumbsTitle) }}</h1>
+                <h1 class="blog__first_title">{{ t("blog_first_title") }}</h1>
 
                 <div class="blog__first_description">
                     @for (blog of blogText; track blog;) {
